name:                sequencer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/seq#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable sequencer
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5, vty, alsa-seq, alsa-core, transformers, enumset, stm
  default-language:    Haskell2010
  ghc-options:         "-threaded"
  other-modules:       Images
                     , MidiOutput
                     , Sequencer
                     , App

source-repository head
  type:     git
  location: https://github.com/githubuser/seq
